stateDiagram-v2
    direction LR
    [*] --> Pending
    Pending --> Running : .then()
    Pending --> Running : .start()
    Running --> state=FULFILLED : task returns
    state=FULFILLED --> Fulfilled

    state Pending {
      [*] --> state=PENDING
      state=PENDING --> Timer
      Timer --> [*]
      Timer : Start Timer
    }

    state Running {
      [*] --> state=RUNNING
      state=RUNNING --> NotifyStarted
      NotifyStarted --> [*]
      NotifyStarted : Notify onStart
    }

    state Fulfilled {
      [*] --> NotifyFulfilled
      NotifyFulfilled --> [*]
      NotifyFulfilled : Notify onFullfilled
    }
